--- a/mylearnus.css
+++ b/mylearnus.css
@@ -84,6 +84,11 @@ nav {
     padding-right:10px;
 }
 
+.banner {
+    width:100%;
+    height:100%;
+}
+
 .container {
     display:flex;
     flex-direction: row;
@@ -110,6 +115,7 @@ nav {
     float:right;
     font-size:16px;
     color:darkgrey;
+    line-height: 40px;
 }
 
 .info-wrap {
@@ -173,10 +179,11 @@ nav {
     font-weight:bolder;
     border: 30px solid #f0cb54;
     border-radius:6px;
-    position:absolute;
-    left:5%;
-    right:5%;
-    z-index: 1;
+    position:relative;
+    top:-50px;
+    margin-left:auto;
+    margin-right:auto;
+    width:80%;
 }
 
 .search-text {
@@ -226,7 +233,6 @@ nav {
 
 .hot {
     padding-left:100px;
-    padding-top:100px;
     padding-bottom:0;
     margin-bottom:0;
 }
